<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/restaurant_row_height"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/img_restaurant_item1"
                    android:layout_width="@dimen/circle_radius"
                    android:layout_height="@dimen/circle_radius"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/restaurant_item_bg"
                    android:scaleType="fitXY" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_restaurant_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/spin_by"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_restaurant_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dining_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layer_restaurant_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/img_restaurant_item2"
                    android:layout_width="@dimen/circle_radius"
                    android:layout_height="@dimen/circle_radius"
                    android:background="@drawable/restaurant_item_bg"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_restaurant_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/create"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_restaurant_item4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
