<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_background"
    tools:context="wheelofeats.roxdesign.com.wheelofeats.Activity.SpinActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_top_height"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/lblSpinHead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/spin_me"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btt_spin_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@color/color_blue_main"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wheellayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgbackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY" />

        <FrameLayout
            android:id="@+id/wheel_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

        </FrameLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/spin_point" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wheel_icon"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/european_wheel_icon0" />

            <TextView
                android:id="@+id/txtspintitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="SPIN ME"
                android:textAlignment="center"
                android:textSize="@dimen/text_title" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/txtspincomment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scrollbars="vertical"
                    android:textSize="18sp" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_top_height"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bttshare"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/drawable_button_white"
                android:text="@string/share"
                android:textColor="@drawable/drawable_text_blue"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bttspin"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="50dp"
                android:autoSizeMinTextSize="10sp"
                android:background="@drawable/drawable_button_white"
                android:text="@string/open_in_yelp"
                android:textColor="@drawable/drawable_text_blue"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
